# SimpleDNSLogger

./: CMakeLists.txt  CMakeSettings.json  DnsServer.cpp  DnsServer.h  Main.cpp  Main.h  Pch.h  Rpc.cpp  Rpc.h
proto/: SimpleDNSLogger.proto
